# prozorro-risks

./: .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt  setup.py
frontend/: Dockerfile
frontend/src/: index.html
frontend/src/js/: main.js
helm/prozorro-risks/: Chart.yaml  values.yaml
helm/prozorro-risks/templates/: _helpers.tpl  api-deployment.yaml  api-service.yaml  contracts-crawler-deployment.yaml  crawler-deployment.yaml  delay-crawler-deployment.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  tenders-crawler-deployment.yaml
src/prozorro/: __init__.py
src/prozorro/risks/: api.py  contracts_crawler.py  crawler.py  db.py  exceptions.py  handlers.py  historical_data.py  logging.py  middleware.py  models.py  requests.py  serialization.py  settings.py  tenders_crawler.py  utils.py
swagger/: download_risks_report.yaml  filter_values.yaml  ping.yaml  region_values.yaml  risks.yaml  risks_feed.yaml  risks_list.yaml  version.yaml
tests/: requirements.txt
tests/fixtures/: base_tender.json  bid.json  complaints.json  contract.json  disqualified_award.json  disqualified_qualification.json  risks.json
tests/integration/: conftest.py  test_api.py  test_risks_api.py  test_risks_crawlers.py  test_risks_db.py  test_risks_historical_data.py  test_risks_utils.py
tests/integration/rules/: test_rule_1_13.py  test_rule_24_3_10.py  test_rule_24_3_11.py  test_rule_24_3_11_1.py  test_rule_24_3_13.py  test_rule_24_3_14.py  test_rule_24_3_15.py  test_rule_24_3_4.py  (+21 more)
(+59 files in other folders)
