[project]
name = "prozorro-risks"
version = "0.11.23"
description = "Risks detection project to monitor active tenders in CDB"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "aiohttp>=3.6.2,<4",
    "motor>=3.7.1,<4",
    "aiohttp-swagger3>=0.9.0,<1",
    "python-json-logger>=2.0.2,<5",
    "sentry-sdk>=2.62.0,<3",
    "pydantic>=2.13.4,<3",
    "ciso8601>=2.3.3,<3",
    "aiocache>=0.12.3,<1",
    "prozorro_crawler",
    "dateorro",
    "standards",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-aiohttp==1.0.5",
    "pytest-asyncio==0.25.0",
    "pytest-cov",
    "parameterized",
    "flake8",
]

[tool.uv.sources]
prozorro_crawler = { git = "https://github.com/ProzorroUKR/prozorro_crawler.git", rev = "2.1.13" }
dateorro = { git = "https://github.com/ProzorroUKR/dateorro.git", rev = "0.0.3" }
standards = { git = "https://github.com/ProzorroUKR/standards.git", rev = "1.0.257" }
